启用 http header session；调整返回数据方式；增加获取用户信息接口
