# swagger/swagger.json
@@ -12,12 +12,12 @@
     "basePath": "/v1",
     "paths": {
         "/users/login": {
-            "get": {
+            "post": {
                 "tags": [
                     "users"
                 ],
-                "description": "Logs user into the system",
-                "operationId": "UserController.Login",
+                "description": "登录或注册",
+                "operationId": "UsersController.Login",
                 "parameters": [
                     {
                         "in": "query",
@@ -31,7 +31,7 @@
                     "200": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/controllers.LoginResponseJSON"
                         }
                     },
                     "400": {
@@ -39,9 +39,73 @@
                     }
                 }
             }
+        },
+        "/users/logout": {
+            "get": {
+                "tags": [
+                    "users"
+                ],
+                "description": "退出登录，销毁 sessionID",
+                "operationId": "UsersController.logout",
+                "responses": {
+                    "200": {
+                        "description": "{nil} logout success"
+                    },
+                    "401": {
+                        "description": "未登录或登录已过期"
+                    }
+                }
+            }
+        },
+        "/users/{uid}": {
+            "get": {
+                "tags": [
+                    "users"
+                ],
+                "description": "获取用户信息",
+                "operationId": "UsersController.Get",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "uid",
+                        "description": "用户ID",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "400": {
+                        "description": ":uid 为空"
+                    },
+                    "401": {
+                        "description": "未登录或登录已过期"
+                    },
+                    "404": {
+                        "description": ":uid 不存在"
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "controllers.LoginResponseJSON": {
+            "title": "LoginResponseJSON",
+            "type": "object",
+            "properties": {
+                "isNewUser": {
+                    "type": "boolean"
+                },
+                "sessionID": {
+                    "type": "string"
+                }
+            }
+        },
         "models.User": {
             "title": "User",
             "type": "object",
@@ -71,11 +135,21 @@
                 "idCardNo": {
                     "type": "string"
                 },
+                "isFriend": {
+                    "type": "boolean"
+                },
+                "isSubscribed": {
+                    "type": "boolean"
+                },
                 "name": {
                     "type": "string"
                 },
                 "phoneNumber": {
                     "type": "string"
+                },
+                "subscriptionCount": {
+                    "type": "integer",
+                    "format": "int64"
                 },
                 "updateTime": {
                     "type": "string",
